--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>350</height>
+    <width>600</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>550</width>
-    <height>350</height>
+    <width>600</width>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>550</width>
-    <height>350</height>
+    <width>600</width>
+    <height>400</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -69,7 +69,7 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>180</width>
+      <width>221</width>
       <height>240</height>
      </rect>
     </property>
@@ -122,9 +122,9 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>250</x>
       <y>50</y>
-      <width>340</width>
+      <width>331</width>
       <height>250</height>
      </rect>
     </property>
@@ -198,6 +198,19 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>Enviar!!</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="grafoPushButton">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>360</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Grafo...</string>
     </property>
    </widget>
   </widget>
