--- a/ventanadeconversaciondialog.ui
+++ b/ventanadeconversaciondialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
+    <width>484</width>
     <height>363</height>
    </rect>
   </property>
@@ -21,7 +21,7 @@
     <rect>
      <x>10</x>
      <y>9</y>
-     <width>441</width>
+     <width>461</width>
      <height>21</height>
     </rect>
    </property>
@@ -41,7 +41,7 @@
   <widget class="QPushButton" name="EnviarpushButton">
    <property name="geometry">
     <rect>
-     <x>340</x>
+     <x>320</x>
      <y>320</y>
      <width>71</width>
      <height>31</height>
@@ -54,7 +54,7 @@
   <widget class="QLineEdit" name="MensajelineEdit">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>320</y>
      <width>291</width>
      <height>31</height>
@@ -72,7 +72,7 @@
     <rect>
      <x>20</x>
      <y>70</y>
-     <width>421</width>
+     <width>451</width>
      <height>241</height>
     </rect>
    </property>
@@ -98,7 +98,7 @@
   <widget class="QLineEdit" name="BusquedaMensajelineEdit">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>70</x>
      <y>40</y>
      <width>181</width>
      <height>21</height>
@@ -111,7 +111,7 @@
   <widget class="QPushButton" name="BuscarpushButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>300</x>
      <y>40</y>
      <width>75</width>
      <height>23</height>
@@ -119,6 +119,19 @@
    </property>
    <property name="text">
     <string>Buscar !</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ConfiguracionesButton">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>320</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ajustes</string>
    </property>
   </widget>
  </widget>
